--- a/templates/recipes/includes/authorCard.html
+++ b/templates/recipes/includes/authorCard.html
@@ -6,7 +6,7 @@
   </div>
   <div class="card-user__body">
     <ul class="card-user__items">
-      {% for recipe in author.recipes.all %}
+      {% for recipe in author.author_recipes.all %}
         {% if forloop.counter < 4 %}
           <li class="card-user__item">
             {% include './recipeCardSmall.html' with recipe=recipe %}
