--- a/templates/recipes/singlePage.html
+++ b/templates/recipes/singlePage.html
@@ -18,10 +18,12 @@
   <div class="single-card__info">
 
     <div class="single-card__header-info">
-      <h1 class="single-card__title">{{ recipe.title }}</h1>   
-      <div class="single-card__favorite">
-        {% include './includes/favoriteButton.html' with recipe=recipe big=True %}
-      </div>
+      <h1 class="single-card__title">{{ recipe.title }}</h1>
+      {% if user.is_authenticated %}
+        <div class="single-card__favorite">
+          {% include './includes/favoriteButton.html' with recipe=recipe big=True %}
+        </div>
+      {% endif %}
     </div>
 
     <ul class="single-card__items">
@@ -42,17 +44,20 @@
 
     <ul class="single-card__items">
       <li class="single-card__item">
-        {% if user.is_authenticated and recipe|is_in_shop_list_of:user %}
-          <button class="button button_style_blue" name="purchases">
-            <span class="icon-check button__icon"></span> Рецепт добавлен
-          </button>
-        {% else %}
-          <button class="button button_style_blue" name="purchases" data-out><span class="icon-plus"></span> Добавить в покупки</button>
-        {% endif %}
+        {% if user.is_authenticated %}
+          {% if recipe|is_in_shop_list_of:user %}
+            <button class="button button_style_blue" name="purchases">
+              <span class="icon-check button__icon"></span> Рецепт добавлен
+            </button>
+          {% else %}
+            <button class="button button_style_blue" name="purchases" data-out><span class="icon-plus"></span> Добавить в покупки</button>
+          {% endif %}
       </li>
-      {% if recipe.author != user %}
-        <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
-      {% endif %}
+          {% if recipe.author != user %}
+            <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
+          {% endif %}
+        {% endif %}
+
     </ul>
 
     <div class="single-card__section">
