--- a/templates/recipes/singlePage.html
+++ b/templates/recipes/singlePage.html
@@ -54,7 +54,15 @@
           {% endif %}
       </li>
           {% if recipe.author != user %}
-            <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
+            {% if user|is_subscribed_to:recipe.author %}
+              <button class="button button_style_light-blue button_size_subscribe" name="subscribe">
+                Отписаться от автора
+              </button>
+            {% else %}
+              <button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>
+                Подписаться на автора
+              </button>
+            {% endif %}
           {% endif %}
         {% endif %}
 
