--- a/templates/recipes/formRecipe.html
+++ b/templates/recipes/formRecipe.html
@@ -49,11 +49,11 @@
               <input
                 type="checkbox"
                 name="tags"
-                id="id_{{ tag.name }}"
+                id="id_tags_{{ tag.title }}"
                 class="tags__checkbox tags__checkbox_style_{{ tag.color }}"
                 value="{{ tag.pk }}"
                 {% if tag.pk in form.tags.value %}checked{% endif %}>
-              <label for="id_{{ tag.name }}" class="tags__label">{{ tag.display_name }}</label>
+              <label for="id_tags_{{ tag.title }}" class="tags__label">{{ tag.display_name }}</label>
             </div>
           {% endfor %}
         </div>
